aireye-genai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aireye-genai
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: aireye-genai
  template:
    metadata:
      labels:
        app: aireye-genai
    spec:
      containers:
        - name: genai
          image: ghcr.io/lowjungxuan98/aireye/genai:0.2.16
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
