aireye-genai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aireye-genai
spec:
  selector:
    app: aireye-genai
  ports:
    - name: http
      port: 80
      targetPort: http
